# spectacle

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  default.nix  flake.nix  fourmolu.nix  fourmolu.yaml  hie.yaml  release.nix  shell.nix  spectacle.cabal
.github/workflows/: ci.yml
benchmark/: Bench.hs
devlog/: closures.org
nix/: 20_03.nix  20_09.nix  fetchNixpkgs.nix  haskell-packages.nix  nixpkgs.nix  overlays.nix  pkgs.nix
nix/overlays/: haskell.nix  logict.nix  spectacle.nix
scripts/: fourmolu
src/Control/: Handler.hs  Hyper.hs  Mealy.hs  Natural.hs  Temporal.hs
src/Control/Applicative/: Day.hs  Phases.hs  Queue.hs
src/Control/Comonad/: Global.hs  Tape.hs
src/Control/Monad/: Fresh.hs  Heap.hs  Levels.hs  Ref.hs
src/Control/Monad/Heap/: Node.hs
src/Control/Monad/Levels/: Internal.hs
src/Data/: Ascript.hs  Bag.hs  Context.hs  FTCQueue.hs  Fingerprint.hs  Name.hs  Node.hs  Temporal.hs  Tree.hs  Var.hs  World.hs
src/Data/Fingerprint/: Array.hs  Binary.hs
src/Data/Functor/: Loom.hs  Tree.hs
src/Data/Functor/Temporal/: Basic.hs  Core.hs  Tree.hs
src/Data/Temporal/: Family.hs  Future.hs  Global.hs  Interval.hs  K.hs  RSet.hs  Time.hs
src/Data/Type/: HList.hs  Induction.hs  List.hs  Rec.hs
src/Data/Type/HList/: Class.hs  Internal.hs
src/Data/Type/Rec/: Internal.hs  Selector.hs
src/Language/: Spectacle.hs
src/Language/Spectacle/: AST.hs  Behavior.hs  Checker.hs  Exception.hs  Fairness.hs  Interaction.hs  Lang.hs  Model.hs  RTS.hs  Spec.hs  Specification.hs  Syntax.hs
src/Language/Spectacle/AST/: Action.hs  Initial.hs  Invariant.hs  Temporal.hs  Terminate.hs
src/Language/Spectacle/AST/Action/: Internal.hs
src/Language/Spectacle/AST/Initial/: Internal.hs
src/Language/Spectacle/AST/Invariant/: Internal.hs
src/Language/Spectacle/AST/Terminate/: Internal.hs
src/Language/Spectacle/Checker/: Cover.hs  CoverageMap.hs  Cycle.hs  Fairness.hs  Fingerprint.hs  Graph.hs  LVStateCoverage.hs  Liveness.hs  MCCoverageMap.hs  MCEnv.hs  MCError.hs  MCErrorList.hs  MCMetrics.hs  MCState.hs  MCStepMap.hs  MCTrace.hs  MCWorldInfo.hs  Metrics.hs  Model.hs  PostCheck.hs  Replayer.hs  Step.hs  Truth.hs  Universe.hs  World.hs
src/Language/Spectacle/Checker/Model/: Internal.hs  MCError.hs  ModelEnv.hs
src/Language/Spectacle/Effect/: NonDet.hs
src/Language/Spectacle/Exception/: ModelCheckerException.hs  RuntimeException.hs
src/Language/Spectacle/Interaction/: AnsiDoc.hs  AnsiPretty.hs  Args.hs  CLI.hs  Diagram.hs  Doc.hs  Options.hs  Parse.hs  Paths.hs  Point.hs  Pos.hs  Render.hs
src/Language/Spectacle/Interaction/View/: WorldView.hs
src/Language/Spectacle/Lang/: Control.hs  Internal.hs  Interpreters.hs  Member.hs  Op.hs  Scoped.hs  Sum.hs
src/Language/Spectacle/Model/: Classifier.hs  Internal.hs  MCEnv.hs  MCState.hs  ModelAction.hs  ModelEnv.hs  ModelError.hs  ModelNode.hs  ModelState.hs  ModelTemporal.hs  Monad.hs
src/Language/Spectacle/RTS/: Callstack.hs  Env.hs  Exception.hs  Registers.hs
src/Language/Spectacle/Spec/: Base.hs  Behavior.hs  CheckResult.hs  Coverage.hs  Implication.hs  Model.hs  Prop.hs  Zipper.hs
src/Language/Spectacle/Spec/Model/: Base.hs
src/Language/Spectacle/Spec/Prop/: Base.hs
src/Language/Spectacle/Specification/: Action.hs  Prop.hs  Typelevel.hs  Variable.hs
src/Language/Spectacle/Syntax/: Ascript.hs  Closure.hs  Enabled.hs  Env.hs  Error.hs  Fresh.hs  Logic.hs  Modal.hs  Name.hs  NonDet.hs  Plain.hs  Prime.hs  Quantifier.hs  Quantify.hs  Relation.hs  Subst.hs
src/Language/Spectacle/Syntax/Closure/: Internal.hs
src/Language/Spectacle/Syntax/Concrete/: NonDet.hs
src/Language/Spectacle/Syntax/Concrete/NonDet/: Internal.hs
src/Language/Spectacle/Syntax/Enabled/: Internal.hs
src/Language/Spectacle/Syntax/Env/: Internal.hs
src/Language/Spectacle/Syntax/Error/: Internal.hs
src/Language/Spectacle/Syntax/Fresh/: Internal.hs
src/Language/Spectacle/Syntax/Logic/: Internal.hs
src/Language/Spectacle/Syntax/Modal/: Graded.hs  Internal.hs  Level.hs  Preterm.hs  Quoted.hs  Rewrite.hs  Term.hs
src/Language/Spectacle/Syntax/NonDet/: Internal.hs
src/Language/Spectacle/Syntax/Plain/: Internal.hs
src/Language/Spectacle/Syntax/Prime/: Internal.hs
src/Language/Spectacle/Syntax/Quantifier/: Internal.hs
src/Language/Spectacle/Syntax/Quantify/: Internal.hs
src/Language/Spectacle/Type/: Rec.hs
test/: Checker.hs  Fingerprint.hs  Main.hs  Spec.hs
test/Checker/: Diehard.hs
test/Lang/: Sum.hs
test/Spec/: CyclicDependencies.hs  Exceptions.hs  Sharing.hs
test/integration/: Main.hs
test/integration/Specifications/: BitClock.hs  Convergence.hs  Cycle.hs  Diehard.hs  DijkstraMutex.hs  GRPC.hs  RateLimit.hs  SimpleClock.hs  SpanningTree.hs  Status.hs
test/integration/Specifications/DijkstraMutex/: Process.hs
test/unit-tests/: Fingerprint.hs  Main.hs  Specification.hs
test/unit-tests/Fingerprint/: Array.hs
test/unit-tests/Functor/Temporal/: Basic.hs
test/unit-tests/Spectacle/: Checker.hs
test/unit-tests/Spectacle/Checker/: Actions.hs  CyclicLiveness.hs  Model.hs  VacuousFormula.hs
test/unit-tests/Spectacle/Syntax/: Logic.hs  Modal.hs
test/unit-tests/Spectacle/Syntax/Modal/: Properties.hs
test/unit-tests/Test/: Gen.hs
test/unit-tests/Test/Control/Comonad/: Tape.hs
test/unit-tests/Test/Language/Spectacle/: Interaction.hs
test/unit-tests/Test/Language/Spectacle/Interaction/: Paths.hs  Point.hs  Pos.hs
test/unit-tests/Test/Laws/: Lens.hs  Ord.hs
