cabal-version:       2.4

name:                spectacle
version:             0.1.0
category:            Testing, Concurrency
synopsis:            Embedded specification language & model checker in Haskell.
description:
  Spectacle is an embedded domain-specific language that provides a family
  of type-level combinators for authoring specifications of program behavior
  along with a model checker for verifying that user implementations of a
  program satisfy written specifications.

author:              Arista Networks
maintainer:          opensource@awakesecurity.com
homepage:            https://github.com/awakesecurity/spectacle
bug-reports:         https://github.com/awakesecurity/spectacle/issues
license:             Apache-2.0
license-file:        LICENSE
copyright:           2021 Arista Networks
build-type:          Simple
tested-with:
  GHC == 8.10.3

extra-source-files:
  README.md
  CHANGELOG.md

common common
  default-language: Haskell2010

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-fields
    -Wpartial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -fshow-warning-groups
    -Wmissing-import-lists
    -Wunused-packages

  build-depends:
      base >=4.14 && <4.15

  default-extensions:
     BangPatterns BlockArguments ConstraintKinds DataKinds DefaultSignatures
     DeriveFunctor DeriveGeneric DerivingVia FlexibleContexts FlexibleInstances
     GADTs LambdaCase MagicHash MultiParamTypeClasses PatternSynonyms PolyKinds
     RankNTypes RoleAnnotations ScopedTypeVariables StandaloneDeriving
     StandaloneKindSignatures TypeApplications TypeOperators UnicodeSyntax
     ViewPatterns

library
  import:              common
  hs-source-dirs:      src

  build-depends:
      containers >= 0.6
    , hashable >= 1.3.0.0
    , microlens
    , microlens-mtl
    , mtl >= 2.2
    , megaparsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , transformers >= 0.5

  exposed-modules:
      Control.Monad.Fresh
    , Control.Monad.Levels
    , Control.Monad.Levels.Internal
    , Control.Hyper
    , Control.Natural
    , Data.Ascript
    , Data.Bag
    , Data.Context
    , Data.Functor.Loom
    , Data.Name
    , Data.Node
    , Data.Type.Rec
    , Data.Type.Rec.Internal
    , Data.Type.Rec.Selector
    , Data.World
    , Language.Spectacle
    , Language.Spectacle.AST
    , Language.Spectacle.AST.Action
    , Language.Spectacle.AST.Action.Internal
    , Language.Spectacle.AST.Invariant
    , Language.Spectacle.AST.Invariant.Internal
    , Language.Spectacle.AST.Terminate
    , Language.Spectacle.AST.Terminate.Internal
    , Language.Spectacle.Checker
    , Language.Spectacle.Checker.Fingerprint
    , Language.Spectacle.Checker.Liveness
    , Language.Spectacle.Checker.LVStateCoverage
    , Language.Spectacle.Checker.MCCoverageMap
    , Language.Spectacle.Checker.MCEnv
    , Language.Spectacle.Checker.MCError
    , Language.Spectacle.Checker.MCMetrics
    , Language.Spectacle.Checker.MCState
    , Language.Spectacle.Checker.MCStepMap
    , Language.Spectacle.Checker.MCTrace
    , Language.Spectacle.Checker.MCWorldInfo
    , Language.Spectacle.Checker.Model
    , Language.Spectacle.Checker.Replayer
    , Language.Spectacle.Checker.Step
    , Language.Spectacle.Exception.RuntimeException
    , Language.Spectacle.Interaction
    , Language.Spectacle.Interaction.AnsiDoc
    , Language.Spectacle.Interaction.Parse
    , Language.Spectacle.Interaction.Render
    , Language.Spectacle.Interaction.View.WorldView
    , Language.Spectacle.Lang
    , Language.Spectacle.Lang.Internal
    , Language.Spectacle.Lang.Member
    , Language.Spectacle.Lang.Op
    , Language.Spectacle.Lang.Scoped
    , Language.Spectacle.RTS.Registers
    , Language.Spectacle.Specification
    , Language.Spectacle.Specification.Action
    , Language.Spectacle.Specification.Prop
    , Language.Spectacle.Specification.Variable
    , Language.Spectacle.Syntax
    , Language.Spectacle.Syntax.Closure
    , Language.Spectacle.Syntax.Closure.Internal
    , Language.Spectacle.Syntax.Enabled
    , Language.Spectacle.Syntax.Enabled.Internal
    , Language.Spectacle.Syntax.Env
    , Language.Spectacle.Syntax.Env.Internal
    , Language.Spectacle.Syntax.Error
    , Language.Spectacle.Syntax.Error.Internal
    , Language.Spectacle.Syntax.Modal
    , Language.Spectacle.Syntax.Modal.Level
    , Language.Spectacle.Syntax.Modal.Preterm
    , Language.Spectacle.Syntax.Modal.Internal
    , Language.Spectacle.Syntax.Modal.Term
    , Language.Spectacle.Syntax.NonDet
    , Language.Spectacle.Syntax.NonDet.Internal
    , Language.Spectacle.Syntax.Plain
    , Language.Spectacle.Syntax.Plain.Internal
    , Language.Spectacle.Syntax.Prime
    , Language.Spectacle.Syntax.Prime.Internal
    , Language.Spectacle.Syntax.Quantifier
    , Language.Spectacle.Syntax.Quantifier.Internal
    , Language.Spectacle.Syntax.Logic
    , Language.Spectacle.Syntax.Logic.Internal

test-suite unit-tests
  import:              common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/unit-tests
  main-is:             Main.hs

  other-modules:
    Fingerprint

  build-depends:
      spectacle
    , hedgehog
    , megaparsec
    , tasty
    , tasty-hedgehog

test-suite integration-tests
  import:              common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/integration
  main-is:             Main.hs

  other-modules:
    Specifications.BitClock
    Specifications.Diehard
    Specifications.DijkstraMutex
    Specifications.DijkstraMutex.Process
    Specifications.SimpleClock
    Specifications.RateLimit

  build-depends:
      spectacle
    , hashable
    , tasty
    , tasty-hunit
    , unordered-containers
    , containers

benchmark benchmark
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Bench.hs
  build-depends:
    , spectacle
    , hashable
    , containers >= 0.6
    , criterion
    , unordered-containers
  ghc-options:
    -threaded
    -rtsopts "-with-rtsopts=-N -A4m -n2m"
